--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,108 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+
+img {
+    display: block;
+    width: 330px;
+    height: 205px;
+    object-fit: cover;
+}
+
+.gallery {
+    padding: 15px;
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: auto;
+}
+
+.photo-card {
+    box-shadow: 1px 5px 9px 0px rgba(66, 68, 90, 1);
+}
+
+.info {
+    background-color: #fff;
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+.info-item {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 5px;
+}
+
+.search-form {
+    padding-top: 20px;
+    border-bottom: 1px solid rgb(14, 16, 71);
+    box-shadow: 1px 5px 9px 0px rgba(66, 68, 90, 1);
+    height: 60px;
+    background-color: #1c2c78;
+    text-align: center;
+}
+
+.search-form input {
+    padding-left: 10px;
+    height: 25px;
+    color: #1c2c78;
+    border: 1px solid rgb(14, 16, 71);
+    box-shadow: 1px 5px 9px 0px rgb(19, 23, 75);
+    background-color: #fff;
+    border-radius: 4px;
+    text-transform: uppercase;
+}
+
+.search-form button {
+    width: 100px;
+    height: 25px;
+    color: #1c2c78;
+    border: 1px solid rgb(14, 16, 71);
+    box-shadow: 1px 5px 9px 0px rgb(19, 23, 75);
+    background-color: #fff;
+    text-transform: uppercase;
+    border-radius: 4px;
+}
+
+.load-more {
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 150px;
+    height: 40px;
+    background-color: #1c2c78;
+    border: 1px solid rgb(14, 16, 71);
+    box-shadow: 1px 5px 9px 0px rgba(66, 68, 90, 1);
+    color: #fff;
+    text-transform: uppercase;
+    border-radius: 4px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+
+.btn-up {
+    padding: 15px;
+    text-align: center;
+    border-radius: 50%;
+    background-color: rgb(235, 238, 243);
+    border: none;
+    cursor: pointer;
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+}
